--- a/sliderPage.html
+++ b/sliderPage.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="sliderStyle.css" />
     <title>ESPN Statistics</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="slider-area">
+        <div class="slider">
+          <img class="img-one" src="/imgs/dak-img1.jpg" />
+          <div class="text-area-one">
+            <span><h4>Dak Prescott</h4></span>
+            <span>
+                <ul class="list-unstyled" >
+                    <li>
+                        22 Touchdowns
+                    </li>
+                    <li>
+                        8 Interceptions
+                    </li>
+                    <li>
+                        3,885 Yards
+                    </li>
+                    <li>
+                        96.9 Rating
+                    </li>
+                </ul>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
