added the statics for the first player using unordered list.

--- a/sliderPage.html
+++ b/sliderPage.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="sliderStyle.css" />
     <title>ESPN Statistics</title>
   </head>
-  <body>
+  <body class="page-color">
     <div class="container">
       <div class="slider-area">
         <div class="slider">
           <img class="img-one" src="/imgs/dak-img1.jpg" />
           <div class="text-area-one">
-            <span><h4>Dak Prescott</h4></span>
+            <span><h3>Dak Prescott</h3></span>
             <span>
                 <ul class="list-unstyled" >
                     <li>
