--- a/sliderPage.html
+++ b/sliderPage.html
@@ -9,28 +9,18 @@
   </head>
   <body class="page-color">
     <div class="container">
-      <div class="slider-area">
-        <div class="slider">
-          <img class="img-one" src="/imgs/dak-img1.jpg" />
-          <div class="text-area-one">
-            <span><h3>Dak Prescott</h3></span>
-            <span>
-                <ul class="list-unstyled" >
-                    <li>
-                        22 Touchdowns
-                    </li>
-                    <li>
-                        8 Interceptions
-                    </li>
-                    <li>
-                        3,885 Yards
-                    </li>
-                    <li>
-                        96.9 Rating
-                    </li>
-                </ul>
-            </span>
-          </div>
+      <div class="slider">
+        <img class="img-one" src="/imgs/dak-img1.jpg" />
+        <div class="text-area-one">
+          <span><h3>Dak Prescott</h3></span>
+          <span>
+            <ul class="list-unstyled">
+              <li>22 Touchdowns</li>
+              <li>8 Interceptions</li>
+              <li>3,885 Yards</li>
+              <li>96.9 Rating</li>
+            </ul>
+          </span>
         </div>
       </div>
     </div>
