using transition is css to make the slider to slid in smoothly.

--- a/sliderPage.html
+++ b/sliderPage.html
@@ -12,13 +12,13 @@
       <div class="slider">
         <img class="img-one" src="/imgs/dak-img1.jpg" />
         <div class="text-area-one">
-          <span><h3>Dak Prescott</h3></span>
+          <span><h2>Dak Prescott</h2></span>
           <span>
             <ul class="list-unstyled">
-              <li>22 Touchdowns</li>
-              <li>8 Interceptions</li>
-              <li>3,885 Yards</li>
-              <li>96.9 Rating</li>
+              <li class="list-stats" >22 Touchdowns</li>
+              <li class="list-stats" >8 Interceptions</li>
+              <li class="list-stats" >3,885 Yards</li>
+              <li class="list-stats" >96.9 Rating</li>
             </ul>
           </span>
         </div>
