added a class to use js

--- a/sliderPage.html
+++ b/sliderPage.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page-color">
     <div class="container">
-      <div class="slider">
+      <div  class="slider card">
         <img class="img-one" src="/imgs/dak-img1.jpg" />
         <div class="text-area-one">
           <span><h2>Dak Prescott</h2></span>
@@ -24,5 +24,9 @@
         </div>
       </div>
     </div>
+    <div class="slidIn-btn-area">
+      <button id="expandingSliderBtn" class="sliding-btn" type="button">Expand</button>
+    </div>
+    <script src="sliderFunctionable.js"></script>
   </body>
 </html>
