--- a/sliderPage.html
+++ b/sliderPage.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page-color">
     <div class="container">
-      <div  class="slider card">
+      <div  class="sliderOut card">
         <img class="img-one" src="/imgs/dak-img1.jpg" />
         <div class="text-area-one">
           <span><h2>Dak Prescott</h2></span>
