tried to make random players

--- a/sliderPage.html
+++ b/sliderPage.html
@@ -8,7 +8,7 @@
     <title>ESPN Statistics</title>
   </head>
   <body class="page-color">
-    <div class="container">
+    <div id="players" class="container">
       <div  class="sliderOut card">
         <img class="img-one" src="/imgs/dak-img1.jpg" />
         <div class="text-area-one">
