Added classes and IDs
I added classes and IDs for the JS to get attached to the card
so I could also get the value out of the name input

--- a/sliderPage.html
+++ b/sliderPage.html
@@ -12,7 +12,7 @@
       <div  class="sliderOut card">
         <img class="img-one" src="/imgs/dak-img1.jpg" />
         <div class="text-area-one">
-          <span><h2>Dak Prescott</h2></span>
+          <span><h2 class="playerNameArea" ></h2></span>
           <span>
             <ul class="list-unstyled">
               <li class="list-stats" >22 Touchdowns</li>
@@ -23,6 +23,12 @@
           </span>
         </div>
       </div>
+    </div>
+    <div id="insertName" class="nameInput">
+        <label for="nameInput">
+          Name:
+          <input type="text" class="name" id="nameBar">
+        </label>
     </div>
     <div class="slidIn-btn-area">
       <button id="expandingSliderBtn" class="sliding-btn" type="button">Expand</button>
