Made the new input for the player interceiptions

--- a/sliderPage.html
+++ b/sliderPage.html
@@ -16,9 +16,9 @@
           <span>
             <ul class="list-unstyled">
               <li class="list-stats stats-td"></li>
-              <li class="list-stats">8 Interceptions</li>
-              <li class="list-stats">3,885 Yards</li>
-              <li class="list-stats">96.9 Rating</li>
+              <li class="list-stats stats-int"></li>
+              <li class="list-stats stats-yrd"></li>
+              <li class="list-stats stats-rate"></li>
             </ul>
           </span>
         </div>
@@ -33,6 +33,11 @@
       <p class="tdInput">
         <label for="tdInput">
           Touchdowns: <input type="number" class="inputs" id="tdBar" />
+        </label>
+      </p>
+      <p class="intInput">
+        <label for="intInput">
+          Interceptions: <input type="number" class="inputs" id="intBar" />
         </label>
       </p>
     </div>
