tryied to add validations to the inputs

--- a/sliderPage.html
+++ b/sliderPage.html
@@ -10,7 +10,7 @@
   <body class="page-color">
     <div id="players" class="container">
       <div class="sliderOut card">
-        <img class="img-one" src="/imgs/dak-img1.jpg" />
+        <img class="img-one" src="" />
         <div class="text-area-one">
           <span><h2 class="playerNameArea"></h2></span>
           <span>
@@ -26,6 +26,11 @@
     </div>
     <div id="insertName" class="nameInput">
       <p>
+        <label for="imgInput">
+          Player Image: <input type="text" class="inputs" id="imgBar">
+        </label>
+      </p>
+      <p>
         <label for="nameInput">
           Name: <input type="text" class="inputs" id="nameBar" />
         </label>
@@ -40,9 +45,19 @@
           Interceptions: <input type="number" class="inputs" id="intBar" />
         </label>
       </p>
+      <p>
+        <label for="yrdInput">
+          Yards: <input type="number" class="inputs" id="yrdBar">
+        </label>
+      </p>
+      <p>
+        <label for="rateInput">
+          Rating: <input type="number" class="inputs" id="rateBar">
+        </label>
+      </p>
     </div>
     <div class="slidIn-btn-area">
-      <button id="expandingSliderBtn" class="sliding-btn" type="button">
+      <button  id="expandingSliderBtn" class="sliding-btn" type="button">
         Expand
       </button>
     </div>
