--- a/sliderPage.html
+++ b/sliderPage.html
@@ -10,7 +10,7 @@
   <body class="page-color">
     <div id="players" class="container">
       <div class="sliderOut card">
-        <img class="img-one" src="/imgs/dak-img1.jpg" />
+        <img class="img-one" src="" />
         <div class="text-area-one">
           <span><h2 class="playerNameArea"></h2></span>
           <span>
@@ -24,22 +24,39 @@
         </div>
       </div>
     </div>
-    <div id="insertName" class="nameInput">
-      <p>
-        <label for="nameInput">
-          Name: <input type="text" class="inputs" id="nameBar" />
-        </label>
-      </p>
-      <p class="tdInput">
-        <label for="tdInput">
-          Touchdowns: <input type="number" class="inputs" id="tdBar" />
-        </label>
-      </p>
-      <p class="intInput">
-        <label for="intInput">
-          Interceptions: <input type="number" class="inputs" id="intBar" />
-        </label>
-      </p>
+    <div class="stats-inputs">
+      <div id="insertName" class="nameInput">
+        <p>
+          <label for="imgInput">
+            Player Image: <input type="text" class="inputs" id="imgBar" />
+          </label>
+        </p>
+        <p>
+          <label for="nameInput">
+            Name: <input type="text" class="inputs" id="nameBar" />
+          </label>
+        </p>
+        <p class="tdInput">
+          <label for="tdInput">
+            Touchdowns: <input type="number" class="inputs" id="tdBar" />
+          </label>
+        </p>
+        <p class="intInput">
+          <label for="intInput">
+            Interceptions: <input type="number" class="inputs" id="intBar" />
+          </label>
+        </p>
+        <p>
+          <label for="yrdInput">
+            Yards: <input type="number" class="inputs" id="yrdBar" />
+          </label>
+        </p>
+        <p>
+          <label for="rateInput">
+            Rating: <input type="number" class="inputs" id="rateBar" />
+          </label>
+        </p>
+      </div>
     </div>
     <div class="slidIn-btn-area">
       <button id="expandingSliderBtn" class="sliding-btn" type="button">
