Added some new font to the player stat inputs

--- a/index.html
+++ b/index.html
@@ -28,32 +28,32 @@
   <div class="stats-inputs">
     <div id="insertName" class="nameInput">
         <p>
-          <label for="imgInput">
+          <label class="playerStats" for="imgInput">
             Player Image: <input type="text" class="inputs" id="imgBar" />
           </label>
         </p>
         <p>
-          <label for="nameInput">
+          <label class="playerStats" for="nameInput">
             Name: <input type="text" class="inputs" id="nameBar" />
           </label>
         </p>
         <p class="tdInput">
-          <label for="tdInput">
+          <label class="playerStats" for="tdInput">
             Touchdowns: <input type="number" class="inputs" id="tdBar" />
           </label>
         </p>
         <p class="intInput">
-          <label for="intInput">
+          <label class="playerStats" for="intInput">
             Interceptions: <input type="number" class="inputs" id="intBar" />
           </label>
         </p>
         <p>
-          <label for="yrdInput">
+          <label class="playerStats" for="yrdInput">
             Yards: <input type="number" class="inputs" id="yrdBar" />
           </label>
         </p>
         <p>
-          <label for="rateInput">
+          <label class="playerStats" for="rateInput">
             Rating: <input type="number" class="inputs" id="rateBar" />
           </label>
         </p>
