--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  
   <link rel="stylesheet" href="sliderStyle.css" />
-  <title>ESPN Statistics</title>
+  
+  <title>Football Statistics</title>
 </head>
 
 <body class="page-color">
-  <h1 id="title" >Espn Slider</h1>
+  <h1 id="title" >Football Slider</h1>
   <div id="players" class="container">
     <div class="sliderOut card">
       <img class="img-one" src="" />
@@ -29,28 +31,33 @@
     <div id="insertName" class="nameInput">
         <p>
           <label class="playerStats" for="imgInput">
-            Player Image: <input type="text" class="inputs" id="imgBar" />
+            Player Image: 
           </label>
+          <input type="text" class="inputs" id="imgBar" />
         </p>
         <p>
           <label class="playerStats" for="nameInput">
-            Name: <input type="text" class="inputs" id="nameBar" />
+            Name:
           </label>
+          <input type="text" class="inputs" id="nameBar" />
         </p>
         <p class="tdInput">
           <label class="playerStats" for="tdInput">
-            Touchdowns: <input type="number" class="inputs" id="tdBar" />
+            Touchdowns:
           </label>
+          <input type="number" class="inputs" id="tdBar" />
         </p>
         <p class="intInput">
           <label class="playerStats" for="intInput">
-            Interceptions: <input type="number" class="inputs" id="intBar" />
+            Interceptions: 
           </label>
+          <input type="number" class="inputs" id="intBar" />
         </p>
         <p>
           <label class="playerStats" for="yrdInput">
-            Yards: <input type="number" class="inputs" id="yrdBar" />
+            Yards: 
           </label>
+          <input type="number" class="inputs" id="yrdBar" />
         </p>
         <p>
           <label class="playerStats" for="rateInput">
@@ -59,10 +66,15 @@
         </p>
     </div>
   </div>
+
   <div class="slidIn-btn-area">
-    <button id="expandBtn" class="sliding-btn" type="button">
-      Expand
+    <button id="refreshBtn" class="refreshing-btn" type="button">
+      <b>Reset Stats</b>
     </button>
+    <button id="expandBtn" class="sliding-btn" type="button">
+      <b>Create</b>
+    </button>
+
   </div>
   <script src="sliderFunctionable.js"></script>
 </body>
