--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
   <link rel="stylesheet" href="sliderStyle.css" />
-
+<link rel="shortcut icon" href="/imgs/ftBall.png" type="shortcut icon">
   <title>Football Statistics</title>
 </head>
 
 <body class="page-color">
-  <h1 class="text-center m-4" id="title">Football Slider</h1>
+  <h1 class="text-center mt-2" id="title">Football Slider</h1>
     <div class="pageContainer sliderOut myCard ml-5">
       <img class="img-one" src="" />
       <div class="ml-5">
@@ -44,7 +44,7 @@
           <input id="yrdBar" type="number" class="form-control col-sm-4 col-lg-3" placeholder=" Yards">
           <label class="mt-2 font-weight-bold text-white" for="name"><h4>Rating:</h4></label>
           <input id="rateBar" type="number" class="form-control col-sm-4 col-lg-3" placeholder=" Rating">
-        <button id="expandBtn" type="button" class="mt-3 btn btn-primary">Create</button>
+        <button id="expandBtn" type="button" class="mt-3 btn btn-success">Create</button>
         <button id="refreshBtn" class="ml-1 mt-3 btn btn-danger" type="button">
           Reset Stats
         </button>
