added a kick button

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <button id="refreshBtn" class="ml-1 mt-3 btn btn-danger" type="button">
           Reset Stats
         </button>
+        <button id="kickBtn" class="ml-5 mt-3 btn btn-warning" type="button">
+            KICK!
+          </button>
       </form>
       
     </div>
