added a message for the fg when it is kicked

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="page-color">
-  <h1 class="text-center mt-2" id="title">Football Slider</h1>
+  <h1 class="text-center mt-5" id="title">Football Slider</h1>
     <div class="pageContainer sliderOut myCard ml-5">
       <img class="img-one" src="" />
       <div class="ml-5">
@@ -28,7 +28,9 @@
     </div>
   <div class="stats-inputs">
     <div id="insertName" class="mb-4">
-
+        <div class="col-sm-4 d-flex">
+            <h1 class="fgMessage text-center text-success ml-4"></h1>
+        </div>
       <form class="ml-5">
         <div class="form-group">
           <label class="mt-2 font-weight-bold text-white" for="playerImg"><h4>Player Image:</h4> </label>
